# GUEST

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
demo/: biosnap_dtis_pubchem_uniprot.tsv  demo.py
src/geppy/: __init__.py  gep_module.py  gep_optimizer_module.py  gep_reorder_module.py  gep_rmsd_module.py  gep_splits_module.py
src/geppy.egg-info/: PKG-INFO
src/graphguest/: __init__.py  evaluate_module.py  guest.py  helper_module.py  interactions_module.py  rmsd_module.py  splits_module.py
src/graphguest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/guest/: __init__.py  guest_interactions_module.py  guest_module.py  guest_splits_module.py
src/guest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: geh_test.py  guest_test.py  node_emb_nr.pkl  nr_dti.txt  rmsd_nr.pkl
tutorials/: EvaluatingGeneralization_DrugScaffolds.ipynb  EvaluatingGeneralization_ProteinFamilies.ipynb  EvaluatingGeneralization_SpecificTest.ipynb
tutorials/data/: aa_dict.pickle  cid_db_dict.pickle  df_results_GeNNius.pkl  df_results_moltrans.pkl  drugbank_dtis.tsv  drugs_annot_full.pkl  gennius_prediction.py  moltrans_predictions.py  new_test.pkl  proteins_annot_full.pkl  smile_dict.pickle  train_mod.py
tutorials/data/predictions/SplitsClassyfire/seed_42/: log_fold_0.out  log_fold_1.out  log_fold_2.out  log_fold_3.out  log_fold_4.out  log_fold_5.out  log_fold_6.out  log_fold_7.out  log_fold_8.out  log_fold_9.out  predictions_fold0.csv  predictions_fold1.csv  predictions_fold2.csv  predictions_fold3.csv  predictions_fold4.csv  predictions_fold5.csv  predictions_fold6.csv  predictions_fold7.csv  predictions_fold8.csv  predictions_fold9.csv
